# backend_web

./: README.md
backend_web/: .env  Cargo.toml  Dockerfile
backend_web/src/: config.rs  db.rs  main.rs  server.rs
backend_web/src/controllers/: bottle_controllers.rs  bottle_transaction_controller.rs  manufacturer_controller.rs  mod.rs  points_controller.rs  rvm_controller.rs  user_controllers.rs
backend_web/src/models/: bottle_transaction_model.rs  bottle_type_model.rs  manufacturer_model.rs  mod.rs  points_model.rs  rvm_model.rs  transaction_model.rs  user_bottles_model.rs  user_model.rs
backend_web/src/repositories/: bottle_transaction_repository.rs  bottle_type_repository.rs  manufacturer_repository.rs  mod.rs  points_repository.rs  rvm_repository.rs  user_repository.rs
backend_web/src/requests/: mod.rs  new_bottle_type.rs
backend_web/src/routes/: bottle_routes.rs  bottle_transaction_routes.rs  bottle_type_routes.rs  health_route.rs  manufacturer_routes.rs  mod.rs  points_routes.rs  rvm_routes.rs  user_routes.rs
backend_web/src/services/: bottle_service.rs  bottle_transaction_service.rs  manufacturer_service.rs  mod.rs  points_service.rs  rvm_service.rs  user_service.rs
